# crisiscortex

./: LICENSE  README.md  pyproject.toml
notebooks/: 01_explore_satellite.ipynb  02_radio_transcription.ipynb
src/crisiscortex/: __init__.py
src/crisiscortex/data/: __init__.py  radio.py  satellite.py
tests/: test_radio.py  test_satellite.py
