[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crisiscortex"
version = "0.1.0"
description = "Multimodal Early-Warning System for Crisis Prediction in Data-Scarce Regions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pillow>=10.0.0",
    "rasterio>=1.3.0",
    "sentinelhub>=3.9.0",
    "openai-whisper>=20231117",
    "librosa>=0.10.0",
    "pyrtlsdr>=0.2.93",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/neomond/crisiscortex"
